Fix z-index.

--- a/less/jquery.ctabs.less
+++ b/less/jquery.ctabs.less
@@ -125,7 +125,7 @@
 }
 
 .ctabs-ctab-active {
-    z-index: 1001;
+    z-index: 1100;
 }
 
 .ctabs-ctab-fix-placeholder {
